@@ -1,5 +1,6 @@
 import cPickle
 import logging
+import pickle
 from datetime import datetime
 
 from beaker.container import OpenResourceNamespaceManager, Container
@@ -82,7 +83,7 @@ class DatabaseNamespaceManager(OpenResourceNamespaceManager):
                              sa.Column('namespace', types.String(255), nullable=False),
                              sa.Column('accessed', types.DateTime, nullable=False),
                              sa.Column('created', types.DateTime, nullable=False),
-                             sa.Column('data', types.BLOB(), nullable=False),
+                             sa.Column('data', types.PickleType, nullable=False),
                              sa.UniqueConstraint('namespace')
             )
             cache.create(checkfirst=True)
@@ -116,8 +117,9 @@ class DatabaseNamespaceManager(OpenResourceNamespaceManager):
         else:
             self._is_new = False
             try:
-                self.hash = cPickle.loads(str(result['data']))
-            except (IOError, OSError, EOFError, cPickle.PickleError):
+                self.hash = result['data']
+            except (IOError, OSError, EOFError, cPickle.PickleError,
+                    pickle.PickleError):
                 log.debug("Couln't load pickle data, creating new storage")
                 self.hash = {}
                 self._is_new = True
@@ -128,14 +130,13 @@ class DatabaseNamespaceManager(OpenResourceNamespaceManager):
         if self.flags is not None and (self.flags == 'c' or self.flags == 'w'):
             cache = self.cache
             if self._is_new:
-                cache.insert().execute(namespace=self.namespace, 
-                                       data=cPickle.dumps(self.hash),
-                                       accessed=datetime.now(), 
+                cache.insert().execute(namespace=self.namespace, data=self.hash,
+                                       accessed=datetime.now(),
                                        created=datetime.now())
                 self._is_new = False
             else:
                 cache.update(cache.c.namespace==self.namespace).execute(
-                    data=cPickle.dumps(self.hash), accessed=datetime.now())
+                    data=self.hash, accessed=datetime.now())
         self.flags = None
     
     def do_remove(self):
