@@ -13,6 +13,8 @@ Release 1.4 (**tip**)
   will then be set on the cookie for the session.
 * Added support for cookie-based sessions in Jython via the JCE (Java
   Cryptography Extensions). Patch from Alex Grönholm.
+* Update Beaker database extensions to work with SQLAlchemy 0.6
+  PostgreSQL and Jython.
 
 Release 1.3.1 (5/5/2009)
 ===============================
